修正部分软件下载地址

--- a/windows相关/软件/开发装机必备.md
+++ b/windows相关/软件/开发装机必备.md
@@ -8,7 +8,7 @@
 
    todo 设置相关
 
-4. [notable MD编辑](https://github-releases.githubusercontent.com/162815665/98cd5100-3c89-11ea-8b79-1c7a1bf62086?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAIWNJYAX4CSVEH53A%2F20210628%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20210628T034242Z&X-Amz-Expires=300&X-Amz-Signature=fd963fac98da15623d40fe123a96298f6b41dc73422a1eb886722a91d81cada4&X-Amz-SignedHeaders=host&actor_id=50271500&key_id=0&repo_id=162815665&response-content-disposition=attachment%3B%20filename%3DNotable.Setup.1.8.4.exe&response-content-type=application%2Foctet-stream) 
+4. [notable MD编辑](https://github.com/notable/notable) 
 
 5. [snipaste截图软件](https://assets.sayori.pw/snipaste-dl/archives/Snipaste-1.16.2-x64.zip)
 
@@ -96,11 +96,13 @@
 
 26. [PotPlayer播放器](https://t1.daumcdn.net/potplayer/PotPlayer/Version/Latest/PotPlayerSetup64.exe)
 
-27. [MindManager21](https://sevenyjl.lanzoui.com/i1iWurazrrg)
+26. [MindManager21](https://sevenyjl.lanzoui.com/i1iWurazrrg)
 
-    许可证
+    许可证:MM21-SDFG-HJGF-DSFH-GFSD-2B2B
 
     （失效了）https://sevenyjl.lanzoui.com/igLtfqsrech
+
+    mindManager21破解
 
 28. [Lively Wallpaper](https://rocksdanister.github.io/lively/)
 
