--- a/简历文档/面试笔记/问题.md
+++ b/简历文档/面试笔记/问题.md
@@ -25,11 +25,11 @@
 - **earlySingletonObjects：** 二级缓存，存储 singletonObject，这个 Bean 实例化了，还没有初始化。
 - **singletonFactories：** 三级缓存，存储 singletonFactory。
 
-![image-20210727143821927](问题.assets/1067344138-499faefc82e6aae7.png)
+<img src="问题.assets/1067344138-499faefc82e6aae7.png" alt="image-20210727143821927" style="zoom:200%;" />
 
 简化版：
 
-![image-20210727143821927](问题.assets/999216281-21501c33d6e3d318_fix732.png)
+<img src="问题.assets/999216281-21501c33d6e3d318_fix732.png" alt="image-20210727143821927" style="zoom:200%;" />
 
 参考地址：https://segmentfault.com/a/1190000039091691
 
