完成算法21 链表叠加

--- a/数据结构与算法/leetcode/算法刷题.md
+++ b/数据结构与算法/leetcode/算法刷题.md
@@ -420,6 +420,47 @@ public static int threeSumClosest(int[] nums, int target) {
 
 17.
 
+## 21.[合并两个有序链表](https://leetcode-cn.com/problems/merge-two-sorted-lists/):heavy_check_mark:
+
+```java
+public static ListNode mergeTwoLists(ListNode l1, ListNode l2) {
+    if (l1 == null) return l2;
+    if (l2 == null) return l1;
+    ListNode next1 = l1;
+    ListNode pre = null;
+    ListNode next2 = l2;
+    while (next1 != null) {
+        if (next2 == null) return l1;
+        if (next1.val > next2.val) {
+            ListNode cun2 = next2.next;
+            pre.next = next2;
+            next2.next = next1;
+            next2 = cun2;
+            pre = pre.next;
+        } else {
+            pre = next1;
+            next1 = next1.next;
+        }
+    }
+    pre.next = next2;
+    return l1;
+}
+
+class ListNode {
+    ListNode next;
+    int val;
+    ListNode() {
+    }
+    public ListNode(int val) {
+        this.val = val;
+    }
+    public ListNode(int val, ListNode next) {
+        this.val = val;
+        this.next = next;
+    }
+}
+```
+
 # 剑指 Offer
 
 ## 剑指 Offer 05. 替换空格:heavy_check_mark:
