--- a/windows相关/软件/开发装机必备.md
+++ b/windows相关/软件/开发装机必备.md
@@ -124,7 +124,11 @@
 
 35. [ev4加密视频破解工具](https://sevenyjl.lanzoui.com/iwuhvsedbsj)
 
-36. 
+36. 文件整理器DropIt
+
+    官网：http://www.dropitproject.com/
+
+37. [gif录屏软件](https://www.screentogif.com/)
 
 > 参考链接：https://www.52pojie.cn/forum.php?mod=collection&action=view&ctid=2124
 
