力扣算法：6 z字符转换

--- a/数据结构与算法/leetcode/算法刷题.md
+++ b/数据结构与算法/leetcode/算法刷题.md
@@ -131,59 +131,54 @@
     }
 ```
 
-## 6.[Z 字形变换](https://leetcode-cn.com/problems/zigzag-conversion/):heavy_multiplication_x:
+## 6.[Z 字形变换](https://leetcode-cn.com/problems/zigzag-conversion/):heavy_check_mark:
 
 ```java
-public static void main(String[] args) {
-        //3:PAHNAPLSIIGYIR
-        //3:PAHNAPLSIIGYIR
-        //4:PINALSIGYAHRPI
-        //4:PINALSIGYAHRPI
-        String s = "ABCD";//ACBD
-        String convert = convert(s, 2);
-        System.out.println(convert);
-    }
 
-
+    /**
+     * 执行耗时:14 ms,击败了24.75% 的Java用户
+     * 内存消耗:39.2 MB,击败了20.91% 的Java用户
+     *
+     * @param s
+     * @param numRows
+     * @return
+     */
     public static String convert(String s, int numRows) {
-        if (numRows < 2) return s;
-        if (s.length() <= numRows) return s;
-        int index = 0;
-        int max = numRows - 2;
-        int lie = 0;
+        int cycle = numRows + numRows - 2;
+        if (cycle == 0) {
+            return s;
+        }
+        ArrayList<String> temp = new ArrayList<>();
+        for (int i = 0; i < numRows; i++) {
+            temp.add("");
+        }
         char[] chars = s.toCharArray();
-        String[][] strings = new String[numRows][s.length() / (numRows + max) * 2 + 1];
+        int index = 0;
+        boolean flag = false;
         for (int i = 0; i < chars.length; i++) {
-            if (i % (numRows * 2 - 2) == 0) {
-                lie = 0;
-                strings[lie][index] = chars[i] + "";
-                lie++;
+            char aChar = chars[i];
+            if (i % cycle == 0) {
+                flag = false;
+                index = 0;
+            } else if ((i + numRows - 2) % cycle == 0) {
+                flag = true;
+                index = numRows - 2;
+            }
+            if (flag) {
+                String sb = temp.get(index);
+                temp.set(index, sb + aChar);
+                index--;
             } else {
-                if (index % 2 == 0) {
-                    strings[lie][index] = chars[i] + "";
-                    if (lie % numRows == (numRows - 1)) {
-                        index++;
-                    }
-                    lie++;
-                } else {
-                    strings[max][index] = chars[i] + "";
-                    max--;
-                    if (max == 0) {
-                        max = numRows - 2;
-                        index++;
-                    }
-                }
+                String sb = temp.get(index);
+                temp.set(index, sb + aChar);
+                index++;
             }
         }
-        StringBuffer stringBuffer = new StringBuffer();
-        for (String[] string : strings) {
-            for (String s1 : string) {
-                if (s1 != null) {
-                    stringBuffer.append(s1);
-                }
-            }
+        StringBuilder stringBuilder = new StringBuilder();
+        for (String s1 : temp) {
+            stringBuilder.append(s1);
         }
-        return stringBuffer.toString();
+        return stringBuilder.toString();
     }
 ```
 
