--- a/windows相关/软件/开发装机必备.md
+++ b/windows相关/软件/开发装机必备.md
@@ -102,7 +102,7 @@
 
     （失效了）https://sevenyjl.lanzoui.com/igLtfqsrech
 
-    mindManager21破解
+    mindManager21破解：https://yun.naodai.org/Software/MindManager/
 
 28. [Lively Wallpaper](https://rocksdanister.github.io/lively/)
 
