添加算法视频

--- a/java/数据结构与算法/数据结构和算法.md
+++ b/java/数据结构与算法/数据结构和算法.md
@@ -23,7 +23,7 @@ keywords:
 
 description: null
 
-photos: null
+photos: https://mms0.baidu.com/it/u=526992055,2283228800&fm=27&gp=0.jpg&fmt=auto
 
 ---
 # 数据结构和算法
@@ -227,5 +227,4 @@ DoubleNode对象：
 	- 如何寻找最短路径？
 	- 如何用策略模式设计策略？
 3. 8皇后问题
-
 
