--- a/java/设计模式/设计模式.md
+++ b/java/设计模式/设计模式.md
@@ -17,14 +17,13 @@ comments: true
 
 date: 2021-08-23 22:20:28
 
-tags: 
+tags: [java]
 
 keywords: 
 
-description: null
+description: java设计模式
 
-photos: null
-
+photos: https://sevenpic.oss-cn-beijing.aliyuncs.com/img/设计原则知识点.png
 ---
 > 参考学习资料：https://www.bilibili.com/video/BV1G4411c7N4?from=search&seid=9231732737918721402
 
