--- a/win/开发装机必备.md
+++ b/win/开发装机必备.md
@@ -117,11 +117,15 @@ todo插件文档
 
 [git工具](https://sevenyjl.lanzoui.com/iIgX3qs4sde)
 
-## 24.[下载神器IDM](https://mirror2.internetdownloadmanager.com/idman638build25.exe?b=1&filename=idman638build25.exe)
+## 24.下载神器IDM
 
-[破解教程](https://sevenyjl.lanzoui.com/icUBVqwod6b)
+* [idm](https://mirror2.internetdownloadmanager.com/idman638build25.exe?b=1&filename=idman638build25.exe)
 
-备用网站：http://idman.ys168.com/
+  [破解教程](https://sevenyjl.lanzoui.com/icUBVqwod6b)
+
+  备用网站：http://idman.ys168.com/
+
+* [eagleget](https://eagleget.en.softonic.com/?ex=BB-1857.3)
 
 ## 25.[PotPlayer播放器](https://t1.daumcdn.net/potplayer/PotPlayer/Version/Latest/PotPlayerSetup64.exe)
 
@@ -158,6 +162,8 @@ mindManager21破解：https://yun.naodai.org/Software/MindManager/
 官网：http://www.dropitproject.com/
 
 ## 37.[gif录屏软件](https://www.screentogif.com/)
+
+## 38.[TS转Mp4](https://www.qinyuanyang.com/zb_users/upload/2021/03/202103101615364653111662.zip)
 
 > 参考链接：https://www.52pojie.cn/forum.php?mod=collection&action=view&ctid=2124
 
