调整算法视频地址

--- a/java/数据结构与算法/leetcode/算法刷题.md
+++ b/java/数据结构与算法/leetcode/算法刷题.md
@@ -312,15 +312,73 @@ public int reverse(int x) {
 
 ## 9.[回文数](https://leetcode-cn.com/problems/palindrome-number/):heavy_multiplication_x:
 
-<iframe src="//player.bilibili.com/player.html?aid=925092201&bvid=BV1WT4y157mg&cid=173552427&page=9" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
+<iframe src="//player.bilibili.com/player.html?aid=805184472&bvid=BV1vy4y1G7Nk&cid=400153147&page=9" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
 
 ## 10.[正则表达式匹配](https://leetcode-cn.com/problems/regular-expression-matching/):heavy_multiplication_x:
 
-<iframe src="//player.bilibili.com/player.html?aid=925092201&bvid=BV1WT4y157mg&cid=173552427&page=10" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
+<iframe src="//player.bilibili.com/player.html?aid=805184472&bvid=BV1vy4y1G7Nk&cid=400153199&page=10" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
 
 ## 11.[盛最多水的容器](https://leetcode-cn.com/problems/container-with-most-water/):heavy_multiplication_x:
 
-<iframe src="//player.bilibili.com/player.html?aid=925092201&bvid=BV1WT4y157mg&cid=173552427&page=11" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
+<iframe src="//player.bilibili.com/player.html?aid=805184472&bvid=BV1vy4y1G7Nk&cid=400153506&page=11" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
+
+```java
+public class Solution {
+    public static void main(String[] args) {
+        //49
+        System.out.println(maxArea2(new int[]{1, 8, 6, 2, 5, 4, 8, 3, 7}));
+        //1
+        System.out.println(maxArea2(new int[]{1, 1}));
+        //16
+        System.out.println(maxArea2(new int[]{4, 3, 2, 1, 4}));
+    }
+    /**
+     * 暴力破解
+     * 大数组要超时~
+     *
+     * @param height
+     * @return
+     */
+    public static int maxArea(int[] height) {
+        int max = 0;
+        for (int i = 1; i < height.length; i++) {
+            for (int j = 0; j < i; j++) {
+                max = Math.max(max, (i - j) * (Math.min(height[i], height[j])));
+            }
+        }
+        return max;
+    }
+
+    /**
+     * 双指针
+     * 需要左右两头移动的问题可以考虑双指针
+     * <p>
+     * 解答成功:
+     * 执行耗时:4 ms,击败了73.12% 的Java用户
+     * 内存消耗:51.3 MB,击败了86.68% 的Java用户
+     */
+    public static int maxArea2(int[] height) {
+        int max = 0;
+        int left = 0;
+        int right = height.length - 1;
+        while (true) {
+            //结束条件：左右指针一样即跳出循环
+            if (left == right) {
+                break;
+            }
+            //判断面积
+            max = Math.max(max, (right - left) * Math.min(height[left], height[right]));
+            //左边指针移动条件，左边的value小于右边则 左边移动，否则右边移动 (条件自己定义也行)
+            if (height[left] < height[right]) {
+                left++;
+            } else {
+                right--;
+            }
+        }
+        return max;
+    }
+}
+```
 
 ## 12.整数转罗马数字:heavy_check_mark:
 
@@ -387,7 +445,7 @@ public int reverse(int x) {
 
 ## 15.[三数之和](https://leetcode-cn.com/problems/3sum/):heavy_multiplication_x:
 
-<iframe src="//player.bilibili.com/player.html?aid=925092201&bvid=BV1WT4y157mg&cid=173552427&page=15" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
+<iframe src="//player.bilibili.com/player.html?aid=805184472&bvid=BV1vy4y1G7Nk&cid=400154278&page=15" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
 
 ```java
 /**
