--- a/java/数据结构与算法/leetcode/算法刷题.md
+++ b/java/数据结构与算法/leetcode/算法刷题.md
@@ -318,7 +318,7 @@ public int reverse(int x) {
 
 <iframe src="//player.bilibili.com/player.html?aid=805184472&bvid=BV1vy4y1G7Nk&cid=400153199&page=10" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
 
-## 11.[盛最多水的容器](https://leetcode-cn.com/problems/container-with-most-water/):heavy_multiplication_x:
+## 11.[盛最多水的容器](https://leetcode-cn.com/problems/container-with-most-water/):heavy_check_mark:
 
 <iframe src="//player.bilibili.com/player.html?aid=805184472&bvid=BV1vy4y1G7Nk&cid=400153506&page=11" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
 
