完善rancher使用文档

--- a/中间件工具/k8s/2.rancher入门.md
+++ b/中间件工具/k8s/2.rancher入门.md
@@ -58,41 +58,76 @@ centos7安装docker说明见：
 
 4. 校验
 
-   ![image-20210407174758784](2.rancher入门图片/image-20210407174758784.png)
+   ![image-20210407174758784](https://sevenpic.oss-cn-beijing.aliyuncs.com/image-20210407174758784.png)
 
 ## 2.部署服务
 
-> 以nacos2.0.0为例子
+### 一、界面方式部署
 
-1. 选择k8s集群并建立建立nacos服务
+1.  登录rancher并进入集群界面模式（如果进入的是仪表盘界面，可以替换地址来切换）
 
-   ![image-20210407175803957](https://sevenpic.oss-cn-beijing.aliyuncs.com/img/image-20210407175803957.png)
+eg:https://10.202.42.247/dashboard/    --->  https://10.202.42.247/g/clusters
 
-   ![image-20210407175835574](2.rancher入门图片/image-20210407175835574.png)
+2. 选择你的集群和对应的项目
 
-2. 配置服务信息
+   ![动画16](https://sevenpic.oss-cn-beijing.aliyuncs.com/%E5%8A%A8%E7%94%BB16.gif)
 
-   网络模式参考：
+   ![image-20210913100727917](https://sevenpic.oss-cn-beijing.aliyuncs.com/image-20210913100727917.png)
 
-   ![image-20210407181906683](https://sevenpic.oss-cn-beijing.aliyuncs.com/img/image-20210407181906683.png)
+3. 点击部署服务
 
-   环境变量设置
+   ![image-20210913100753574](https://sevenpic.oss-cn-beijing.aliyuncs.com/image-20210913100753574.png)
 
-   此处为单机版，并配置mysql存储了
+4. 部署信息完善
 
-   ```properties
-   MODE=standalone
-   MYSQL_SERVICE_DB_NAME=nacos-dev
-   MYSQL_SERVICE_HOST=10.202.83.203
-   MYSQL_SERVICE_PASSWORD=GSAdmin123
-   MYSQL_SERVICE_PORT=3306
-   MYSQL_SERVICE_USER=root
-   SPRING_DATASOURCE_PLATFORM=mysql
-   ```
+   ![image-20210913101117540](https://sevenpic.oss-cn-beijing.aliyuncs.com/image-20210913101117540.png)
 
-3. 校验并测试
+   eg: 以nginx为案例进行部署
 
-   ![image-20210407182020231](https://sevenpic.oss-cn-beijing.aliyuncs.com/img/image-20210407182020231.png)
+   ![image-20210913101400288](https://sevenpic.oss-cn-beijing.aliyuncs.com/image-20210913101400288.png)
 
-   点击：31330/tcp 调整并访问：http://主机地址:31330/nacos/
+   ![image-20210913101454281](https://sevenpic.oss-cn-beijing.aliyuncs.com/image-20210913101454281.png)
+
+   ![image-20210913101503211](https://sevenpic.oss-cn-beijing.aliyuncs.com/image-20210913101503211.png)
+
+### 二 、yaml方式部署
+
+#### 1、界面导入yaml方式
+
+![image-20210913103046011](https://sevenpic.oss-cn-beijing.aliyuncs.com/image-20210913103046011.png)
+
+![image-20210913103120835](https://sevenpic.oss-cn-beijing.aliyuncs.com/image-20210913103120835.png)
+
+#### 2、k8s命令方式
+
+1. 点击集群
+
+   ![image-20210913103155099](https://sevenpic.oss-cn-beijing.aliyuncs.com/image-20210913103155099.png)
+
+2. 复制kubeconfig文件到机器
+
+   ![image-20210913103243697](https://sevenpic.oss-cn-beijing.aliyuncs.com/image-20210913103243697.png)
+
+   cd ~
+
+   mkdir .kube
+
+   vim .kube/config
+
+3. 下载kubectl命令
+
+http://rancher-mirror.cnrancher.com/kubectl/v1.19.11/linux-amd64-v1.19.11-kubectl
+
+上传到服务器
+
+```shell
+chmod 777 linux-amd64-v1.19.11-kubectl
+mv linux-amd64-v1.19.11-kubectl kubectl
+sudo mv kubectl /bin/
+ kubectl get namespace
+```
+
+4. 利用k8s命令行创建
+
+> 参考：http://docs.kubernetes.org.cn/683.html
 
