--- a/win/开发装机必备.md
+++ b/win/开发装机必备.md
@@ -165,5 +165,9 @@ mindManager21破解：https://yun.naodai.org/Software/MindManager/
 
 ## 38.[TS转Mp4](https://www.qinyuanyang.com/zb_users/upload/2021/03/202103101615364653111662.zip)
 
+## 39.[鼠标特效软件](https://github.com/cuiliang/ClickShow/releases)
+
+## 40.[Quicker](https://getquicker.net)
+
 > 参考链接：https://www.52pojie.cn/forum.php?mod=collection&action=view&ctid=2124
 
