--- a/java/数据结构与算法/leetcode/算法刷题.md
+++ b/java/数据结构与算法/leetcode/算法刷题.md
@@ -544,7 +544,7 @@ public static int threeSumClosest(int[] nums, int target) {
     }
 ```
 
-17.
+## 18.[四数之和](https://leetcode-cn.com/problems/4sum/)
 
 ## 21.[合并两个有序链表](https://leetcode-cn.com/problems/merge-two-sorted-lists/):heavy_check_mark:
 
